force-app/main/default/objects/Interbodega_Ruta__c/Interbodega_Ruta__c.object-meta.xml
<CustomObject>
    <description>Catalogo de interbodegas que P2G_InterbodegaValidator lee al crear un Shipment (antes estaba hardcodeado en la clase). Un renglon con Origen y Destino marca esa ruta exacta de la cuenta; un renglon con "Toda la cuenta" marca TODOS los viajes de la cuenta sin importar direcciones. Lo mantiene operaciones sin deploys; desmarcar Activa apaga un renglon sin borrarlo. Los renglones duplicados no hacen dano (el validator los colapsa) pero ensucian.</description>
    <label>Ruta Interbodega</label>
    <nameField>
        <displayFormat>IB-{0000}</displayFormat>
        <label>Numero</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rutas Interbodega</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>