force-app/main/default/objects/Interbodega_Ruta__c/fields/Activa__c.field-meta.xml
<CustomField>
    <fullName>Activa__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Desmarcar apaga el renglon sin borrarlo (el validator solo lee renglones activos). Deja rastro en el historial de quien lo apago y cuando.</description>
    <label>Activa</label>
    <type>Checkbox</type>
</CustomField>