force-app/main/default/objects/Interbodega_Ruta__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Rutas Interbodega</relationshipLabel>
    <relationshipName>Rutas_Interbodega</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>