force-app/main/default/objects/Interbodega_Ruta__c/fields/Destino__c.field-meta.xml
<CustomField>
    <fullName>Destino__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Direccion de destino de la ruta. Vacio solo cuando el renglon es "Toda la cuenta".</description>
    <label>Destino</label>
    <referenceTo>Account_Address__c</referenceTo>
    <relationshipLabel>Rutas Interbodega (destino)</relationshipLabel>
    <relationshipName>Rutas_Interbodega_Destino</relationshipName>
    <type>Lookup</type>
</CustomField>