force-app/main/default/objects/Interbodega_Ruta__c/fields/Origen__c.field-meta.xml
<CustomField>
    <fullName>Origen__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Direccion de origen de la ruta. Vacio solo cuando el renglon es "Toda la cuenta".</description>
    <label>Origen</label>
    <referenceTo>Account_Address__c</referenceTo>
    <relationshipLabel>Rutas Interbodega (origen)</relationshipLabel>
    <relationshipName>Rutas_Interbodega_Origen</relationshipName>
    <type>Lookup</type>
</CustomField>