force-app/main/default/objects/Interbodega_Ruta__c/fields/Toda_La_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Toda_La_Cuenta__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marcado = TODOS los viajes de la cuenta son interbodega, sin importar origen ni destino (caso OPERADORAS EN SERVICIOS COMERCIALES y FIFCO MEXICO). Con esto marcado, Origen y Destino van vacios.</description>
    <label>Toda la cuenta</label>
    <type>Checkbox</type>
</CustomField>