force-app/main/default/objects/Interbodega_Ruta__c/listViews/Todas.listView-meta.xml
<ListView>
    <fullName>Todas</fullName>
    <columns>NAME</columns>
    <columns>Cuenta__c</columns>
    <columns>Origen__c</columns>
    <columns>Destino__c</columns>
    <columns>Toda_La_Cuenta__c</columns>
    <columns>Activa__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas las rutas</label>
</ListView>